new bom structure